change from i to you

--- a/index.html
+++ b/index.html
@@ -36,58 +36,60 @@
 
   <script>
     const fragen = [
-      "Wenn ich im Lotto gewinnen würde, was würde ich mit dem Geld machen?",
-      "Was war der beste Tag meines Lebens? Was war der schlechteste Tag meines Lebens?",
-      "Wer ist derzeit mein Crush?",
-      "Bin ich eine Android- oder iPhone-Person?",
-      "Wobei fühle ich mich stets lebendig?",
-      "Wo sehe ich mich in 5 Jahren?",
-      "Wonach bin ich süchtig?",
-      "Was mache ich gerne am Wochenende?",
-      "Habe ich jemals einen Preis gewonnen?",
-      "Wie viel Geld gebe ich jede Woche aus?",
-      "Was ist mein Lieblingssport?",
-      "Was ist meine größte Angst?",
-      "Mag ich es, unter neuen Leuten zu sein und sie kennenzulernen?",
-      "Was ist mein Lieblingsessen?",
-      "Was ist mein Lieblingsfilm?",
-      "Was ist meine Lieblingsserie?",
-      "Möchte ich mal Kinder haben? Wenn ja, wie viele?",
-      "Welche drei Dinge würde ich auf eine einsame Insel mitnehmen?",
-      "Wie sieht meine Morgenroutine aus?",
-      "Würde ich lieber auf dem Land leben oder in der Großstadt?",
-      "Was machen meine Eltern beruflich?",
-      "Stehe ich lieber früh oder spät auf?",
-      "Liebe ich es zu fliegen?",
-      "Ist Reisen mein Ding?",
-      "Liebe ich das Leben?",
-      "Liebe ich meinen Beruf?",
-      "Gibt es Dinge, die ich mir unbedingt wünsche?",
-      "Würde ich jemals in ein Sommercamp gehen?",
-      "Würde ich jemals aufhören, etwas zu machen, was sein muss, obwohl ich es nicht will?",
-      "Wie flexibel bin ich, wenn du Hilfe brauchst? Lasse ich alles stehen und liegen?",
-      "Kaufe ich unbedacht ein? Bin ich ein Overthinker?",
-      "Hatte ich während meiner Kindheit ein Haustier?",
-      "Liebe ich Tiere und würde ich meinen Kindern ein Haustier erlauben?",
-      "Wie stehe ich zum Thema Ehe?",
+      "Wenn du im Lotto gewinnen würde, was würdest du mit dem Geld machen?",
+      "Was war der beste Tag deines Lebens?", 
+      "Was war der schlechteste Tag deines Lebens?",
+      "Wer ist derzeit dein Crush?",
+      "Bist du ein Android- oder iPhone-Person?",
+      "Wobei fühlst du dich stets lebendig?",
+      "Wo siehst du dich in 5 Jahren?",
+      "Wonach bist du süchtig?",
+      "Was machst du gerne am Wochenende?",
+      "Hast du jemals einen Preis gewonnen?",
+      "Wie viel Geld gibst du jede Woche aus?",
+      "Was ist deine Lieblingssportart?",
+      "Was ist deine größte Angst?",
+      "Magst du es, unter neuen Leuten zu sein und sie kennenzulernen?",
+      "Was ist dein Lieblingsessen?",
+      "Was ist dein Lieblingsfilm?",
+      "Was ist deine Lieblingsserie?",
+      "Möchtest du mal Kinder haben? Wenn ja, wie viele?",
+      "Welche drei Dinge würdest du auf eine einsame Insel mitnehmen?",
+      "Wie sieht deine Morgenroutine aus?",
+      "Würdest du lieber leben, auf dem Land oder in der Großstadt?",
+      "Was machen deine Eltern beruflich?",
+      "Stehst du lieber früh oder spät auf?",
+      "Liebst du es mit dem Flugzeug zu fliegen?",
+      "Ist Reisen dein Ding?",
+      "Liebest du das Leben?",
+      "Liebest du deinen Beruf?",
+      "Gibt es Dinge, die du mir unbedingt wünschst?",
+      "Würdest du jemals zu einem Sommercamp gehen? Wenn ja, als was? Campbetreuer oder Teilnehmer?",
+      "Würdest du jemals aufhören, etwas zu machen, was sein muss, obwohl ich es nicht will?",
+      "Wie flexibel bist du, wenn ich Hilfe brauche? Würdest du alles stehen und liegen lassen?",
+      "Kaufst du unbedacht ein?",
+      "Bist du ein Overthinker?",
+      "Hattest du während deiner Kindheit ein Haustier?",
+      "Liebst du Tiere und würdest du deinen Kindern ein Haustier erlauben?",
+      "Wie stehest du zum Thema Ehe?",
       "Würde ich jemanden heiraten, der mich zu etwas zwingt?",
-      "Stell dir vor, ich komme zu dir und sage, dass mein Mann mich geschlagen hat. Was machst du?",
+      "Stell dir vor, ich komme zu dir und sage: mein Mann hat mich geschlagen. Was würdest du machen?",
       "Stell dir vor, mein Mann verdächtigt mich einer Affäre. Was machst du? Würdest du mir das zutrauen?",
-      "Was ist mein absolutes No-Go in einer Ehe und in einer Freundschaft?",
-      "Gibt es Dinge, die früher für mich gar nicht gingen, die ich jetzt gelassen sehe?",
-      "Ist es für mich ein Ding, wenn jemand vor mir prahlt? Wie reagiere ich?",
+      "Was ist dein absolutes No-Go in einer Ehe?",
+      "Was ist dein absolutes No-Go in einer Freundschaft?",
+      "Gibt es Dinge, die früher für dich gar nicht gingen, die du jetzt gelassen siehst?",
+      "Ist es für dich ein Ding, wenn jemand vor dir prahlt? Wie reagierst du?",
       "Was war deine schönste sexuelle Erfahrung – und warum?",
-      "Gibt es etwas, was mich zum Ausrasten bringt?",
+      "Gibt es etwas, was dich zum Ausrasten bringt?",
       "Leben wir beide in zwei verschiedenen Welten oder eher nur in verschiedenen Ebenen?",
-      "Telefoniere ich gerne?",
-      "Mit wem telefoniere ich am liebsten?",
-      "Haben sich in den letzten Jahren einige Grundeinstellungen an mir verändert?",
-      "Gibt es eine Sache, die du an mir ändern würdest – welche wäre es?",
-      "Stört dich meine unruhige oder stressige Art manchmal?",
-      "Habe ich Ticks?",
-      "Wie löse ich Konflikte?",
-      "Wie sehe ich die Welt?",
-      "Wo würde ich in 5 Jahren sein?",
+      "Telefonierst du gerne?",
+      "Mit wem telefonierst du am liebsten? und warum?",
+      "Haben sich in den letzten Jahren einige Grundeinstellungen an dir verändert?",
+      "Gibt es eine Sache, die du an dir ändern würdest – welche wäre es?",
+      "Stört dich das, wenn jemand eine unruhige oder stressige Art hat?",
+      "Hast du Ticks?",
+      "Wie löst du Konflikte?",
+      "Wie siehst du die Welt?",
       "Was ist mein Lieblingsfilmgenre und mein Lieblingsbuch?",
       "Wie würde ich heißen, wenn ich meinen Namen ändern könnte?",
       "Wohin möchte ich unbedingt reisen?",
