--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
       "Was ist deine größte Angst?",
       "Magst du es, unter neuen Leuten zu sein und sie kennenzulernen?",
       "Was ist dein Lieblingsessen?",
-      "Was ist dein Lieblingsfilm?",
       "Was ist deine Lieblingsserie?",
       "Möchtest du mal Kinder haben? Wenn ja, wie viele?",
       "Welche drei Dinge würdest du auf eine einsame Insel mitnehmen?",
@@ -90,110 +89,110 @@
       "Hast du Ticks?",
       "Wie löst du Konflikte?",
       "Wie siehst du die Welt?",
-      "Was ist mein Lieblingsfilmgenre und mein Lieblingsbuch?",
-      "Wie würde ich heißen, wenn ich meinen Namen ändern könnte?",
-      "Wohin möchte ich unbedingt reisen?",
-      "Welche Dinge nehme ich mir als Nächstes vor – beruflich und privat?",
-      "Was ist eine Sache, die ich hasse?",
-      "Wie denken andere über mich?",
+      "Was ist dein Lieblingsfilmgenre?",
+      "Was ist dein Lieblingsbuch?",
+      "Wie würdest du heißen, wenn du deinen Namen ändern könnte?",
+      "Wohin möchtest du unbedingt reisen?",
+      "Welche Dinge möchstest du dir als Nächstes vor nehmen – beruflich und privat?",
+      "Was ist eine Sache, die du hasst?",
+      "Was glaubst du, wie andere über mich denken?",
       "Wie wirkt mein Halo-Effekt?",
-      "Welche Sprachen spreche ich?",
-      "Wofür sollte ich dankbar sein?",
-      "Gibt es irgendwas, was ich nicht sehe?",
+      "Welche Sprachen sprichtst du?",
+      "Wofür bist du dankbar?",
+      "Gibt es irgendwas, dass dir meistens entgeht? Like in Beziehungen oder Freundschaften?",
       "Gibt es etwas, das dich beim Sex nervt oder ein No-Go für dich ist?",
-      "Welchen Dingen schenke ich zu wenig Aufmerksamkeit?",
-      "Was war das letzte Konzert, auf dem ich war?",
-      "Ist eine Freundschaft zwischen Mädchen und Jungen für mich ein Problem?",
-      "Würde ich jemals ein Kind adoptieren?",
-      "Welche politischen Orientierungen habe ich?",
-      "Habe ich jemals etwas gemacht, das unter meinem Niveau ist oder nicht zu mir passt?",
+      "Welche Dinge schenkst du zu wenig Aufmerksamkeit?",
+      "Was war das letzte Event, auf dem du warst?",
+      "Ist die Freundschaft zwischen Mann und Frau möglich?",
+      "Würdest du jemals ein Kind adoptieren?",
+      "Welche politischen Orientierungen hast du?",
+      "Hast du jemals etwas gemacht, das unter deinem Niveau ist oder nicht zu dir passt?",
       "Fällt es dir leicht, beim Sex über deine Wünsche zu sprechen?",
-      "Habe ich jemals meine Haare gefärbt? Welche Farbe möchte ich noch ausprobieren?",
-      "Was ist meine Lieblingsfarbe?",
-      "Wie sieht mein Hochzeitstag aus?",
-      "Wie stelle ich mir meinen Junggesellenabschied vor?",
+      "Hast du jemals deine Haare gefärbt? Welche Farbe möchtest du noch ausprobieren?",
+      "Was ist deine Lieblingsfarbe?",
+      "Wie sieht dein wunsch Hochzeitstag aus?",
+      "Wie stellst du dir dein Junggesellenabschied vor?",
       "Würde ich jemals für den Staat arbeiten?",
-      "Sind mir Menschen um mich herum wichtig?",
-      "Bin ich extrovertiert oder introvertiert – und warum?",
-      "Wer hat den größten Einfluss auf mich?",
-      "Welche Eigenschaft würdest du mir gerne klauen und welche würdest du mir empfehlen?",
+      "Sind dir Menschen um dich herum wichtig?",
+      "Bist du ein extrovertierter oder introvertierter Mensch – und warum glaubst du, bist du es?",
+      "Wer hat den größten Einfluss auf dich?",
+      "Für Freunde: Welche Eigenschaft würdest du mir gerne klauen und welche würdest du mir empfehlen?",
       "Wenn wir uns früher getroffen hätten, wie wäre unsere Beziehung verlaufen?",
       "Was machen wir zusammen, wenn wir 85 Jahre alt sind?",
-      "Welchen Beruf wollte ich als Kind ausüben?",
-      "Beschreibe mich in drei Wörtern.",
-      "Welche Berühmtheit würden wir in unsere Freundschaft aufnehmen?",
-      "Was lege ich auf meine Pizza?",
-      "Wie tröste ich mich an einem harten Tag?",
-      "Wer saugt in meinem Umfeld die meiste Energie von mir?",
+      "Welchen Beruf wolltest du als Kind ausüben?",
+      "Beschreibe dich in drei Wörtern.",
+      "Welche Berühmtheit würden wir in unsere Freundschaft mit aufnehmen?",
+      "Wie isst du am liebsten deine Pizza?",
+      "Wie tröstest du dich an einem harten Tag?",
+      "Wer saugt in deinem Umfeld die meiste Energie von dir?",
       "Wenn ich sterben würde, was würdest du von meinem Besitz haben wollen?",
-      "Wenn wir für einen Tag allein auf einer abgelegenen Insel wären – was würdest du mit mir machen?",
+      "Wenn wir für einen Tag allein auf einer abgelegenen Insel wären – was würden wir am ersten Tag alles machen?",
       "Was bewunderst du an mir?",
-      "Wenn ich ein Tier wäre, welches Tier wäre ich?",
-      "Was würde ich als Erstes tun, wenn ich im Lotto gewinne?",
-      "Was bestelle ich an einer Bar?",
-      "Was war die schlechteste und beste Idee, die ich je hatte?",
-      "Wann warst du von mir am meisten enttäuscht?",
-      "Bin ich ein Keks-, Eis- oder Kuchen-Mensch?",
-      "Wann war das letzte Mal, dass du von mir beeindruckt warst?",
-      "Was liebe ich an uns?",
-      "Was ist meine liebste Erinnerung?",
-      "Welchen fiktiven BFFs sind wir am ähnlichsten?",
-      "Wenn wir auf einer einsamen Insel festsitzen, warum wäre ich eine Bereicherung?",
-      "Was macht mich verrückt?",
-      "Was ist das Schlimmste, was mir je passiert ist?",
-      "Wenn ich Präsident*in wäre, was wäre meine erste Amtshandlung?",
+      "Wenn ich ein Tier wärst, welches Tier wärst du?",
+      "Was bestellst du an einer Bar?",
+      "Was war die schlechteste und beste Idee, die du je hattest?",
+      "Wann warst du von dir am meisten enttäuscht?",
+      "Bist du ein Keks-, Eis- oder ein Kuchen-Mensch?",
+      "Wann warst du das letzte Mal von dir selbst beeindruckt?",
+      "Was liebst du an dir?",
+      "Was ist deine liebste Erinnerung?",
+      "Für Freunde: Welchen fiktiven BFFs sind wir am ähnlichsten?",
+      "Wenn wir auf einer einsamen Insel festsitzen, warum wärst du eine Bereicherung?",
+      "Was macht dich verrückt?",
+      "Was ist das schlimmste, was dir je passiert ist?",
+      "Wenn du Präsident*in wärst, was würdest du als erste Amtshandlung erteilen?",
       "Nenne drei Dinge, über die wir uns zu 100 % einig sind.",
       "Gibt es einen Geruch, der dich an mich erinnert?",
-      "Was musst du machen, um mich zum Lachen zu bringen?",
-      "In welcher Game- oder Realityshow wäre ich gerne?",
+      "Was muss ich machen, um dich zum Lachen zu bringen?",
+      "In welcher Game- oder Realityshow wärst du gerne? oder siehst du mich?",
       "Warum verstehen wir uns so gut?",
-      "Zu welchen Liedern singe ich im Auto am liebsten?",
-      "Welche Mode-Entscheidung war mein größter Fehler?",
+      "Zu welchen Liedern singst du im Auto am liebsten?",
+      "Welche Mode-Entscheidung war dein größter Fehler?",
       "Stell dir vor, wir schreiben zusammen ein erotisches Buch – was wäre das erste Kapitel?",
-      "Was sollte ich als Nächstes in die Hand nehmen?",
-      "Was war mein peinlichster Moment?",
-      "Was ist unser nächster großer Urlaubsort?",
-      "Warum magst du es, mit mir zu reisen? Würdest du mich auf deinen Reisen vermissen?",
-      "Was war meine bisher größte Leistung?",
+      "Was möchtest du als nächstes in die Hand nehmen?",
+      "Was war dein peinlichster Moment?",
+      "Was ist dein nächster großer Urlaubsort?",
+      "Freunde Frage: Warum magst du es, mit mir zu reisen? Würdest du mich auf deinen Reisen vermissen?",
+      "Was war deine bisher größte Leistung?",
       "Wo kannst du mich immer finden?",
-      "Wovor habe ich am meisten Angst?",
-      "Nehme ich Mode ernst oder ist es einfach nur Shopping?",
-      "Wie gehe ich mit Geld um?",
+      "Wovor hast du am meisten Angst?",
+      "Nimmst du Mode ernst oder ist es einfach nur Anziehsachen?",
+      "Wie gehst du mit Geld um?",
       "Würde ich gerne ins All reisen oder lieber auf der Erde bleiben?",
-      "Was wäre anders in meinem Leben, wenn ich ein Mann oder eine Frau wäre?",
+      "Was wäre anders in deinem Leben, wenn du ein Mann/ eine Frau wäre?",
       "Wie sähe eine perfekte Stadt aus, in der ich gerne leben würde?",
       "Wenn ich in drei Worten zusammenfassen müsste, wonach ich mich in einer Beziehung sehne, welche wären es?",
-      "Worauf höre ich am meisten?",
-      "Was müsste ich an meinem Charakter ändern?",
-      "Wenn ich mich beruflich für einen guten Zweck einsetzen sollte, welcher wäre das?",
+      "Worauf/Auf wenn hörst du am meisten?",
+      "Gibt es eine Charaktereigenschaft die du gerne ändern würdest?",
+      "Wenn du dich beruflich für einen guten Zweck einsetzen solltest, welcher wäre das?",
       "In welche Zeit würde ich reisen, wenn ich eine Zeitmaschine ausprobieren könnte?",
-      "Wenn ich meinem zukünftigen Kind drei Dinge beibringen könnte, welche wären das?",
-      "Wer ist mein größter Feind?",
-      "Mit wem würde ich gerne essen gehen – tot oder lebendig?",
-      "Wenn ich eine Farbe wäre, welche wäre es?",
-      "Wenn ich ein Beruf wäre, welcher wäre es?",
-      "Gibt es einen Ort, an dem ich schon immer mal Sex haben wollte?",
-      "Was ist das schrägste, was ich bei einem Date je erlebt habe?",
-      "Was war mein schrägster Moment als Kind, über den ich heute lachen kann?",
-      "Was würde ich bis heute ändern, wenn ich es könnte?",
-      "Welches Vorbild hat mich am meisten beeinflusst?",
+      "Wenn du deinem zukünftigen Kind drei Dinge beibringen könntest, welche wären das?",
+      "Wer ist dein größter Feind?",
+      "Mit wem würdest du gerne essen gehen – tot oder lebendig?",
+      "Wenn du eine Farbe wärst, welche wäre es?",
+      "Wenn du ein Beruf wärst, welcher wäre es?",
+      "Gibt es einen Ort, an dem du schon immer mal Sex haben wolltest?",
+      "Was ist das schrägste, was du bei einem Date je erlebt hast?",
+      "Was war dein schrägster Moment als Kind, über den ich heute lachen kann?",
+      "Was würdest du bis heute ändern, wenn du es könntest?",
+      "Welches Vorbild hat dich am meisten beeinflusst?",
       "Welche Kinderserie habe ich am liebsten geschaut?",
-      "Was ist mein nutzlosestes Talent?",
+      "Was ist dein nutzlosestes Talent?",
       "Reagiere ich zu schnell?",
       "Was ist die hässlichste Farbe, die je erfunden wurde?",
-      "Mit welchem Prominenten würde ich gerne tauschen und in seinem Körper aufwachen?",
-      "Was ist das seltsamste, was ich je gegessen habe?",
-      "Wäre ich lieber schlau oder hübsch?",
-      "Wäre ich eher dominant, verspielt oder zärtlich – wenn ich freie Wahl hätte?",
-      "Welcher Song darf nicht auf meiner Hochzeit fehlen?",
-      "Welcher Song sollte jedes Mal gespielt werden, wenn ich einen Raum betrete?",
+      "Mit welchem Prominenten würdest du gerne tauschen und in seinem Körper aufwachen?",
+      "Was ist das seltsamste, was du je gegessen hast?",
+      "Wärst du lieber schlau oder hübsch?",
+      "Wärst du eher dominant, verspielt oder zärtlich?",
+      "Welcher Song darf nicht auf deiner Hochzeit fehlen?",
+      "Welcher Song sollte jedes Mal gespielt werden, wenn du einen Raum betretest?",
       "Wonach sollte Zahnpasta schmecken?",
       "Was war die peinlichste Verkleidung?",
       "Was würdest du an deinem ersten Tag malen, wenn du ein Künstler wärst?",
       "Wenn du frei wählen könntest wo du mal leben könntest, wo wäre es?",
       "Welche Superkraft hättest du gerne?",
       "Welcher Spongebob Charakter wärst du?",
-      "Was steht noch auf der Bucket List?",
+      "Was steht noch auf deiner Bucket List?",
       "Drei Gerüche, die du am liebsten hast?",
       "Gibt es etwas, das du noch nie jemandem erzählt hast, aber eigentlich gerne teilen würdest?",
       "Wirke ich auf dich eher analytisch oder kreativ?",
@@ -205,7 +204,7 @@
       "Wie wäre ein Mensch, der das genaue Gegenteil von dir ist?",
       "Was war der schlechteste Tipp, den du je erhalten hast?",
       "Wenn du in einer Crew sein könntest von One Piece, welche wäre es?",
-      "Was wärst du in One Piece?",
+      "Was (Pirat, Marinesoldat oder ein einfacherer NPC) wärst du in One Piece?",
       "Auto oder Motorrad?",
       "Yacht oder Hubschrauber?",
       "Ein Botschafterkind zu sein oder für immer in einer Hood leben?",
@@ -219,8 +218,8 @@
       "Wie viel Freiraum brauchst du in einer Beziehung?",
       "Gibt es etwas, das du noch nie jemandem erzählt hast – aber mir erzählen würdest?",
       "Was bedeutet für dich ‚guter Sex‘ – geht’s dir eher um Technik, Gefühl oder Verbindung?",
-      "Wenn ich ein Gemüse wäre, welches wäre ich – und warum genau das?!",
-      "Wie würden wir heißen, wenn wir einen gemeinsamen Instagram-Influencer-Account hätten?",
+      "Wenn du ein Gemüse wärst, welches wärst du – und warum genau das?!",
+      "Wie würden wir heißen, wenn wir einen gedeinsamen Instagram-Influencer-Account hätten?",
       "Was ist dein aktuelles Lieblingszitat?",
       "Was ist dein aktuelles Lieblingssong?",
       "Was regt dich jetzt gerade in diesem Moment am meisten auf?",
@@ -229,19 +228,19 @@
       "Was wäre dein Ziel für dein erstes Auto?",
       "Wenn du ein Stein wärst, welcher wäre es?",
       "Wenn du ein Tier wärst, welche Art? (Fliegen, Boden, Wasser)",
-      "Stell dir vor, du hattest einen Mobber als Kind und kannst dich rächen, wie würdest du es anstellen?",
+      "Stell dir vor, du hattest einen Mobber als du klein warst und kannst dich endlich rächen, wie würdest du es anstellen?",
       "Was würdest du gern mit mir ausprobieren, wenn du ganz ehrlich bist?",
       "Wie sähe deine Hochzeit aus?",
       "Was ist das Dümmste, das wir zusammen tun könnten – und trotzdem Spaß hätten?",
-      "Welche Teufelsfrucht hättest du gerne?",
+      "Welche Teufelsfrucht hättest du gerne (One Piece)?",
       "Wenn du Chirurg wärst, für welche Fachrichtung würdest du dich entscheiden?",
       "Stell dir vor, du hast einen großen Fehler gemacht, wie ist deine Reaktion?",
-      "Wenn du einen Raub planen würdest, wie würdest du es angehen, was würdest du stehlen?",
+      "Wenn du einen Raub planen würdest, wie würdest du es angehen und was würdest du stehlen?",
       "Fängst du random ein Gespräch mit Fremden an?",
-      "Wenn du einen Film drehen könntest, auf welches Genre würdest du dich beziehen?",
+      "Wenn du einen Film drehen könntest, auf welches Genre würdest du dich spezialisieren?",
       "Hast du ein Sinn für Gerechtigkeit oder eher für Recht?",
       "Was zieht dich bei einem Mann oder einer Frau an?",
-      "Welche ist deine wildeste Sexfantasie?",
+      "Was ist deine wildeste Sexfantasie?",
       "Wie weit würdest du gehen, um eine andere Person für dich zu gewinnen?",
       "Was bedeutet dir unsere Beziehung?",
       "Stell dir vor, du könntest ein Gesetz ändern oder neu aufsetzen, welches wäre es?",
@@ -259,6 +258,7 @@
       "Würdest du dich für eine andere Person vor einem fahrenden Bus werfen?",
       "Würdest du es im Auto treiben?",
       "Gibst du Geschenke auch zurück?",
+      "Wie viel gibst du aus für deine Freunde, wenn sie Geburtstag haben?",
       "Welcher Charakter wärst du bei Modern Family?",
       "Wenn du ein sinnloses Bakterium wärst, welches wäre es?",
       "Welchen Tanz willst du mal lernen?",
@@ -267,12 +267,12 @@
       "Was in deinem Leben ist echt und was glaubst du, spielst du nur für andere?",
       "Glaubst du, Menschen können sich von Grund auf ändern?",
       "Wenn Tiere sprechen könnten, welches Tier wäre deiner Meinung nach der unhöflichste Gesprächspartner?",
-      "Wenn du bei Herr der Elemente wärst, welches Element willst du beherrschen?",
+      "Welches Element hättest du gerne, wenn du bei Herr der Elemente mitspielen könntest?",
       "Roastest du gerne andere Menschen?",
       "Hast du früher andere gemobbt?",
       "Stell dir vor, du leitest eine Schule, welche Fächer würdest du umgestalten?",
-      "Stell dir vor, wir machen Schluss, aber durch etwas Willkürliches: Ich gehe dir fremd auf einer Reise, sobald ich zurück bin, vertragen wir uns. A. Bist du sauer, dass ich mit jemandem geschlafen habe? B. Bist du sauer, dass ich es dir nicht erzählt habe?",
-      "Stell dir vor, du bist Single und von deinem besten Freund ist die Frau auch Single. Dein Freund ist gestorben und du verliebst dich in sie. Für dich fein?",
+      "Stell dir vor, wir machen Schluss, aber durch etwas Willkürliches: Ich schlafe auf einer Reise mit jemanden, sobald ich zurück bin, vertragen wir uns wieder. A. Bist du sauer, dass ich mit jemandem geschlafen habe? B. Wärst du sauer, wenn ich es dir nicht erzählen würde?",
+      "Stell dir vor, du bist Single und dein bester Freund stirbt, so ist die Frau nun ne witwe. Du verliebst dich in sie, würdest du mit ihr was haben?", 
       "Dirty Talk oder lieber schweigen und spüren?"
     ];
 
